added the main page and napagana ko na login button and logout button accesible na sya

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="18dp"
             app:cardElevation="10dp"
-            android:background="#FFFFFF"
+            android:background="#F2F3F4"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="28dp">
 
