--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/teal_200</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
+  <!-- Base application theme. -->
+    <style name="Base.Theme.SeriousMode" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 </resources>
